# players-characteristics-and-tournament-rules

./: .gitignore  README.md  pyproject.toml  requirements.R
code/01_data_collection/accuracy_chesscom/: accuracy.R  accuracy_fast_parsing.py  chess_games_scraper.ipynb  find_short_games.py  generating_missing_links_data.ipynb  package-lock.json  package.json  wrangler.jsonc
code/01_data_collection/pgn_fetching/: cleanup_intermediate_outputs.py  concatenate_pgn_datasets.py  fetch_chesscom_pgns_1000.py
code/01_data_collection/player_metadata/: 07_find_player_metadata_from_fide.py  08_merge_player_metadata_into_players_final_data.py  add_fide_info_to_players.py  add_gender_to_players.py  fetch_chesscom_html_names.py  fetch_chesscom_names.py  fill_fide_birthyears.py  lookup_missing_birthdays.py  lookup_missing_birthdays_wikidata.py  match_missing_names_fide.py  match_missing_names_fide_fast.py  search_bing_names.py  search_ddg_names.py
data/: DATA_REQUIREMENTS.md
docs/: PACKAGE_AUDIT.md  RUN_ORDER.md  THESIS_TO_SCRIPTS_MAPPING.md
paper/: README.md  main.tex  references.bib
paper/sections/: 01_introduction.tex  02_literature_review.tex  03_data.tex  04_methodology.tex  05_results.tex  06_null_results.tex  07_conclusion.tex  appendix.tex
paper/tables/: table1_baseline_game_level_effects.tex  table2_rating_advantage_robustness.tex  table3_time_slot_displacement.tex  table4_move_mechanisms.tex  table5_style_index_interactions.tex  table6_null_and_weak_results.tex  table7_data_source_variable_map.tex  table8_empirical_design_catalog.tex
(+67 files in other folders)
